hphp/hack/test/typecheck/tconst/unsupported_this2.php.exp
File "unsupported_this2.php", line 4, characters 31-34:
The type "this" can only be used as a return type, to instantiate a covariant type variable, or as a private non-static member variable (Naming[2043])
