hphp/hack/test/typecheck/tconst/unsupported_this2.php
<?hh

interface I<T> {}
abstract class C implements I<this::X> {
  abstract const type X;
}
